--- a/morning-workout-git-html-css/index.html
+++ b/morning-workout-git-html-css/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Morning Workout - Git, HTML, CSS</title>
+<link rel="stylesheet" type="text/css"href="layout.css">
+  <link rel="stylesheet"type="text/css"href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,900"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
